# QCD

./: Material_BasicCheckPlot.h  README.md  baselineDefQCDfiltee.h
QCDTools/: .nfs000000230b06d37e00000156  123.txt  DeepTrim  DeepTrim.cc  DeepTrim.h  EOSCmd_SampleTag.py  EOSrm.sh  EventPick.cc  EventPick.h  Makefile  NTuple_EventPick.py  NTuple_QCDTFTrimAndSlim.py  NTuple_SFCheckTrim.py  NTuple_SSTrim.py  NTuple_SignalStudy.py  QCDTFTrimAndSlimCommon.h  QCDTFTrimAndSlim_Data.cc  QCDTFTrimAndSlim_LLHadTau.cc  QCDTFTrimAndSlim_QCD.cc  QCDTFTrimAndSlim_Rare.cc  QCDTFTrimAndSlim_Spring15_74X_Feb_2016_Ntp_v6p0_forMoriond_ZJetsToNuNu_HT-400To600_ext1stopFlatNtuples.root  QCDTFTrimAndSlim_Spring15_74X_Feb_2016_Ntp_v6p0_forMoriond_ZJetsToNuNu_HT-400To600stopFlatNtuples.root  QCDTFTrimAndSlim_TTZ.cc  QCDTFTrimAndSlim_Zinv.cc  QCDTFTrimAndSlim_ZinvQCD.cc  SFCheckTrim.cc  SFCheckTrim.h  SMSMETCheck.py  SSTrim  SSTrim.cc  SSTrim_LLHadTau.cc  SSTrim_Signal.cc  SSTrim_TTZ.cc  SSTrim_ZinvQCD.cc  SSTrimmed_Spring15_74X_Feb_2016_Ntp_v6p0_forMoriond_TTZToQQstopFlatNtuples_1.root  SignalStudy.cc  SignalStudy.h  SignalStudy_Test.root  bak.condor_SSTrim.ttjetsleptonic  combineEventList.txt  (+25 more)
QCDTools/AggSBTest/: 201730AggSB201784SBMap.json  AggSBCheck.py  qcd_v13.2.1.txt  qcd_v13_aggsb_nortg.txt  qcd_v13_aggsb_spltg.txt  qcd_v13_norsb_nortg.txt  qcd_v13_norsb_spltg.txt
QCDTools/FnalEOSTool/: EOSCmd_SampleTag.py  EOScp.sh  EOSrm.sh  QCDTFTrimAndSlim_Summer16_80X_Jan_2017_Ntp_v12p0_ST_tW_antitop_5f_NoFullyHadronicDecays_ext1_stopFlatNtuples.root  QCDTFTrimAndSlim_Summer16_80X_Jan_2017_Ntp_v12p0_ST_tW_antitop_5f_NoFullyHadronicDecays_ext2_stopFlatNtuples.root  QCDTFTrimAndSlim_Summer16_80X_Jan_2017_Ntp_v12p0_ST_tW_antitop_5f_NoFullyHadronicDecays_stopFlatNtuples.root  QCDTFTrimAndSlim_Summer16_80X_Jan_2017_Ntp_v12p0_ST_tW_antitop_5f_inclusiveDecays_stopFlatNtuples.root  QCDTFTrimAndSlim_Summer16_80X_Jan_2017_Ntp_v12p0_ST_tW_top_5f_NoFullyHadronicDecays_ext1_stopFlatNtuples.root  QCDTFTrimAndSlim_Summer16_80X_Jan_2017_Ntp_v12p0_ST_tW_top_5f_NoFullyHadronicDecays_ext2_stopFlatNtuples.root  QCDTFTrimAndSlim_Summer16_80X_Jan_2017_Ntp_v12p0_ST_tW_top_5f_NoFullyHadronicDecays_stopFlatNtuples.root  QCDTFTrimAndSlim_Summer16_80X_Jan_2017_Ntp_v12p0_ST_tW_top_5f_inclusiveDecays_stopFlatNtuples.root  QCDTFTrimAndSlim_Summer16_80X_Jan_2017_Ntp_v12p0_TTJets_DiLept_stopFlatNtuples.root  QCDTFTrimAndSlim_Summer16_80X_Jan_2017_Ntp_v12p0_TTJets_SingleLeptFromT_stopFlatNtuples.root  QCDTFTrimAndSlim_Summer16_80X_Jan_2017_Ntp_v12p0_TTJets_SingleLeptFromTbar_stopFlatNtuples.root  QCDTFTrimAndSlim_Summer16_80X_Jan_2017_Ntp_v12p0_WJetsToLNu_HT-1200To2500_stopFlatNtuples.root  QCDTFTrimAndSlim_Summer16_80X_Jan_2017_Ntp_v12p0_WJetsToLNu_HT-200To400_ext1_stopFlatNtuples.root  QCDTFTrimAndSlim_Summer16_80X_Jan_2017_Ntp_v12p0_WJetsToLNu_HT-200To400_ext2_stopFlatNtuples.root  QCDTFTrimAndSlim_Summer16_80X_Jan_2017_Ntp_v12p0_WJetsToLNu_HT-200To400_stopFlatNtuples.root  QCDTFTrimAndSlim_Summer16_80X_Jan_2017_Ntp_v12p0_WJetsToLNu_HT-2500ToInf_stopFlatNtuples.root  (+5 more)
QCDTools/QCDStopFlattrees/2017MoriondTxt/: METSplit.aa  METSplit.ab  METSplit.ac  METSplit.ad  METSplit.ae  METSplit.af  METSplit.ag  METSplit.ah  METSplit.ai  METSplit.aj  METSplit.ak  METSplit.al  METSplit.am  METSplit.an  METSplit.ao  METSplit.ap  METSplit.aq  METSplit.ar  METSplit.as  METSplit.at  METSplit.au  METSplit.av  METSplit.aw  METSplit.ax  METSplit.ay  METSplit.az  METSplit.ba  METSplit.bb  METSplit.bc  METSplit.bd  METSplit.be  METSplit.bf  METSplit.bg  METSplit.bh  METSplit.bi  METSplit.bj  METSplit.bk  METSplit.bl  METSplit.bm  METSplit.bn  (+806 more)
RSMethod/: JetResponse  JetResponse.cc  JetResponse.h  JetResponseQCD.root  Makefile  QCDReWeighting.h  condor_gogoQCDRS  gogoJetResponse.sh  runList_QCD_HT_skimmed_MET30_v6.txt  test.py  tupleTest
SensitivityStudy/: .nfs0000000010a9b929000005ed  .nfs000000007d522823000006c5  .nfs00000000ef1dd63f000000ef  DC_sb_LL_Header.h  DC_sb_LL_Header.h.bak.37Ref  DC_sb_LL_Header.h.bak.45Ref  Makefile  SBGeometry.h  SS.cc  SS.h  SS.root  SSAUX1DAllMC.root  SSAUX1DPlots.h  SSAllMC.root  SSBinFunction.h  SSBinIDTest.cc  SSCS.root  SSDataCardCompare.cc  SSDataCardCompare.h  SSMuCS.root  SSPlots.h  SSReWeighting.h  a.out  condor_gogoSS  gogoSS.sh  runList_Sensitivity_MC_DeepSkimmed_v4_BG.txt
TFactorMethod/: .nfs00000000177d808d0000182a  .nfs0000000044219cb60000059c  123.h  AllHadTTJetsWJetsSTHistgram.cc  AllHadTTJetsWJetsSTHistgram.h  AllHadTTJetsWJetsSTPlots.cc  AllHadTTJetsWJetsSTPlots.h  BasicCheckHistgram.cc  BasicCheckHistgram.h  BasicCheckLL.root  BasicCheckPlots.cc  BasicCheckPlots.h  BasicCheckQCD.root  CalHistgram.cc  CalHistgram.h  CalQCD.root  ClosureHistgram.cc  ClosureHistgram.h  ClosurePlots.cc  ClosurePlots.h  ClosureUncAUX.cc  ClosureUncAUX.h  Constant.h  ConstantsSnippet.h  DeepTrim.cc  ExpQCD.root  LLHadTau.cc  LLHadTau.h  LLHadTauFactors.cc  LLHadTauFactors.h  Makefile  PredDataHistgram.cc  PredDataHistgram.h  PredQCDData.root  PredQCDMC.root  QCD.cc  QCD.h  QCDBinFunction.cc  QCDBinFunction.h  QCDFactors.cc  (+29 more)
TmpCommonTool/: searchBins45QCDFineTunning.h
Tool/: .nfs0000000019fa799700000a89  .nfs000000001eef929a00000a84  .nfs00000000233223af00000d97  .nfs00000000287f35a500000a7b  .nfs00000000321719ce00000a87  .nfs0000000034115f8800000a7e  .nfs0000000058f9919300000a7c  .nfs000000005e998e3900000a8a  .nfs0000000065460155000004b0  .nfs000000006e0828de0000093a  .nfs00000000875e18e600000d99  .nfs000000008a08c985000009d5  .nfs000000008d79a31200000d9a  .nfs000000009c3776fe00000a85  .nfs00000000a787184700000a7f  .nfs00000000ac1037d800000a88  .nfs00000000ae9fa50e00000a8b  .nfs00000000d435bdf20000093c  .nfs00000000d4810c5d0000093b  .nfs00000000d5bb9faa0000a6e4  .nfs00000000e31c54c300000a7d  .nfs00000000e64a779200000d98  .nfs00000000f837feee00000a86  Baseline.h  BasicCheckLL.root  BasicCheckPlots.cc  BasicCheckPlots.h  BasicCheckQCD.root  BasicQCDCheck.cc  BasicQCDHists.h  CalQCD.root  ClosurePlots.cc  ClosurePlots.h  DataDriven.h  ExpQCD.root  Makefile  NTuple_DeepTrim.py  PredQCD.root  PredQCDData.root  PredQCDMC.root  (+31 more)
(+816 files in other folders)
