root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1546.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1547.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1548.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1549.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1550.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1551.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1552.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1553.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1554.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1555.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1556.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1557.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1558.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1559.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1560.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1561.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1562.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1563.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1564.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1565.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1566.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1567.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1568.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1569.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1570.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1571.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1572.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1573.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1574.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1575.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1576.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1577.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1578.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1579.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1580.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1581.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1582.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1583.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1584.root
root://cmseos.fnal.gov//store/user/lpcsusyhad/Stop_production/Spring16_80X_Nov_2016_Ntp_v11X_new_IDs/MET/Spring16_80X_Nov_2016_Ntp_v11p0_new_IDs_MET-Run2016C-PromptReco-v2/161111_231159/0001/stopFlatNtuples_1585.root
